Fix layout bug

--- a/styles/components/Header.less
+++ b/styles/components/Header.less
@@ -2,6 +2,7 @@
 {
   width: 100%;
   height: 44px;
+  flex-shrink: 0;
   
   background-color: @header-bg;
   border-bottom: 1px solid @border-color;
