--- a/styles/components/Main.less
+++ b/styles/components/Main.less
@@ -9,10 +9,5 @@
   {
     flex-grow: 1;
     display: flex;
-
-    > nav
-    {
-      width: 165px;
-    }
   }
 }
