--- a/styles/components/Nav.less
+++ b/styles/components/Nav.less
@@ -3,6 +3,8 @@ nav
   @padding: 14px;
   @header-height: 28px;
   
+  width: 165px;
+
   *
   {
     cursor: default;
