--- a/styles/components/Notes.less
+++ b/styles/components/Notes.less
@@ -6,6 +6,7 @@
   
   .note-list-item
   {
+    overflow: hidden;
     background: @note-list-bg;
     border-bottom: 1px solid @border-color;
     height: 84px;
@@ -41,6 +42,10 @@
     {
       font-size: 12px;
       color: @note-list-color-snippet;
+      
+      // white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
   }
 }
